# danp_demo

./: .gitmodules  CMakeLists.txt  DESIGN.md  README.md  TODO.md  prj.conf
boards/: nucleo_l476rg.overlay
include/: client.h  common_definitions.h  utilities.h
src/: client.c  main.c  server.c  shell.c  tmtc.c  utilities.c
temp/: client.c  server.h
